force-app/main/default/objects/SharePoint_Files__c/SharePoint_Files__c.object-meta.xml
<CustomObject>
    <label>SharePoint Files</label>
    <nameField>
        <label>SharePoint Files Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SharePoint Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>