force-app/main/default/objects/SharePoint_Files__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SharePoint Files</relationshipLabel>
    <relationshipName>SharePoint_Files</relationshipName>
    <type>Lookup</type>
</CustomField>