force-app/main/default/objects/SharePoint_Files__c/fields/Document_Library_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Library_Name__c</fullName>
    <label>Document Library Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>