force-app/main/default/objects/SharePoint_Files__c/fields/File_URL__c.field-meta.xml
<CustomField>
    <fullName>File_URL__c</fullName>
    <label>File URL</label>
    <type>Url</type>
</CustomField>