force-app/main/default/objects/SharePoint_Files__c/fields/Folder_URL__c.field-meta.xml
<CustomField>
    <fullName>Folder_URL__c</fullName>
    <label>Folder URL</label>
    <type>Url</type>
</CustomField>