force-app/main/default/objects/SharePoint_Files__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SharePoint Files</relationshipLabel>
    <relationshipName>SharePoint_Files</relationshipName>
    <type>Lookup</type>
</CustomField>