force-app/main/default/objects/SharePoint_Files__c/fields/Site_URL__c.field-meta.xml
<CustomField>
    <fullName>Site_URL__c</fullName>
    <label>Site URL</label>
    <type>Url</type>
</CustomField>